--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,6 @@
   "build/images/logo copy.png": "/build/images/logo copy.png",
   "build/images/logo.png": "/build/images/logo.png",
   "build/images/fav.png": "/build/images/fav.png",
-  "build/images/preview.png": "/build/images/preview.png"
+  "build/images/preview.png": "/build/images/preview.png",
+  "build/./build/index.html": "/build/./build/index.html"
 }
